# AMSKY01

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  debug_sensor.py  generate_version.py  platformio.ini  plot_logs.py  pyproject.toml  requirements.txt  sensor_viewer.py  setup.cfg  setup.py  version.py
.github/workflows/: build-appimage.yml  platformio-build.yml  publish-dev-to-pypi.yml  publish-dev-to-testpypi.yml  publish-to-pypi.yml  test.yml
fw/: .gitignore  generate_version.py  platformio.ini
fw/boards/: amsky01.json
fw/src/: AMS_TSL2591.cpp  AMS_TSL2591.h  MLX90641.cpp  MLX90641.h  MLX90641_I2C_Arduino.cpp  amsky01_utils.h  config.h  main.cpp  sqm_utils.h
include/: version.h
src/: AMS_TSL2591.cpp  MLX90641_I2C_Driver.cpp  MLX9064X_I2C_Driver_Wire1.cpp  MLX9064X_I2C_Driver_Wire1.h  main.cpp
sw/: README.md  amsky01_cli.py  amsky01_viewer.desktop  amsky01_viewer.py  melexis.py  plot_latest.sh  plot_logs.py  sensor_viewer.py
sw/amsky01.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
systemd/: sensor-viewer.service
