[metadata]
name = amsky01
# version is supplied by setup.py
author = AstroMeters
author_email = info@astrometers.eu
description = AMSKY01 Sensor Data Viewer - Real-time visualization of sensor data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AstroMeters/AMSKY01
project_urls =
    Bug Reports = https://github.com/AstroMeters/AMSKY01/issues
    Source = https://github.com/AstroMeters/AMSKY01
    Documentation = https://github.com/AstroMeters/AMSKY01#readme
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: System :: Monitoring
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = sw
py_modules = amsky01_viewer, amsky01_cli, plot_logs
python_requires = >=3.8
install_requires = file: requirements.txt

[options.extras_require]
dev =
    pytest>=6.0
    black>=21.0
    flake8>=3.8
    mypy>=0.910

[options.entry_points]
console_scripts =
    amsky01-viewer = amsky01_viewer:main
    amsky01-cli = amsky01_cli:main
    amsky01-plot = plot_logs:main
